修改为复现配置

--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,15 @@
 
 buildscript {
     repositories {
+
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,6 +19,9 @@ buildscript {
 
 allprojects {
     repositories {
+
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         google()
         jcenter()
         maven {
@@ -27,3 +33,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
